--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding:0;
     font:1rem;
     font-family:  Times, 'Times New Roman', serif;
+    color:white;
 }
 #heading{
     text-align: center;
