--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0;
     font:1rem;
     font-family:  Times, 'Times New Roman', serif;
-    color:white;
+    color:rgb(238, 231, 231);
 }
 #heading{
     text-align: center;
