--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     margin:0;
     padding:0;
     font:1rem;
-    font-family:  Times, 'Times New Roman', serif;
+    font-family:  Helvetica, sans-serif;
     color:rgb(238, 231, 231);
+    font-weight: bold;
 }
 #heading{
     text-align: center;
